fixed code.code to add text shadow for readability

--- a/themes/political_scss/4-components/_code.scss
+++ b/themes/political_scss/4-components/_code.scss
@@ -4,7 +4,7 @@
 code.code {
   border-radius: var(--element-radius) !important;
   background-color: var(--color-bg-blue-light) !important;
-  color: var(--color-text-red) !important;
+  color: var(--color-text-pink) !important;
   text-shadow: 1px 1px 1px black !important;
   font-size: 0.9rem;
   padding: .2em .4em;
